<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/content_root"
    tools:ignore="HardcodedText,contentDescription,SmallSp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginBottom="5dp"
                    android:background="#eeeeee"
                    android:padding="2dp"
                    android:src="@android:drawable/ic_menu_camera" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/kind_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kind_company"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/kind_organization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:text="@string/kind_organization"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kind_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20sp"
                        android:text="@string/kind_position"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/kind_kana"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40sp"
                        android:layout_marginTop="5sp"
                        android:text="@string/kind_kana"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/kind_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:layout_marginLeft="40sp"
                        android:text="@string/kind_name"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/kind_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/kind_address"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/kind_tel"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/kind_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="03-0000-0000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/kind_fax"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/kind_fax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="03-9999-9999"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/kind_mobile"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/kind_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="090-9999-9999"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/kind_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/kind_email"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/kind_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/kind_web"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/kind_notes" />

            <TextView
                android:id="@+id/kind_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ほげほげ" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:padding="0dp" >

        <ImageView
            android:id="@+id/phone_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/button_bg"
            android:padding="4dp"
            android:src="@drawable/phone" />

        <ImageView
            android:id="@+id/mobile_phone_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/button_bg"
            android:padding="4dp"
            android:src="@drawable/mobile_phone" />

        <ImageView
            android:id="@+id/email_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/button_bg"
            android:padding="12dp"
            android:src="@drawable/envelope" />

        <ImageView
            android:id="@+id/browser_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/button_bg"
            android:padding="6dp"
            android:src="@drawable/globe" />
    </LinearLayout>

</RelativeLayout>